@@ -617,6 +617,7 @@ void gwy_data_field_croscorrelate(GwyDataField *data_field1,
                                   GwyDataField *data_field2,
                                   GwyDataField *x_dist,
                                   GwyDataField *y_dist,
+                                  GwyDataField *score,
                                   gint search_width, 
                                   gint search_height,
                                   gint window_width,
@@ -626,6 +627,7 @@ void gwy_data_field_croscorrelate_iteration(GwyDataField *data_field1,
                                   GwyDataField *data_field2,
                                   GwyDataField *x_dist,
                                   GwyDataField *y_dist,
+                                  GwyDataField *score,
                                   gint search_width, 
                                   gint search_height,
                                   gint window_width,
